// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render > renders Svelte component (full) 1`] = `
"<script lang="ts">
// Generated by MistCSS, do not modify
import type { SvelteHTMLElements } from 'svelte/elements'
import './component.mist.css'

type Props = { attr?: 'a' | 'b', attrFooBar?: 'foo-bar', isFoo?: boolean, propFoo?: string, propBar?: string } & SvelteHTMLElements['div']

type $$Props = Props

const { attr, attrFooBar, isFoo, propFoo, propBar, ...props } = $$props
</script>

<div {...props} data-attr={attr} data-attr-foo-bar={attrFooBar} data-is-foo={isFoo} style:--prop-foo={propFoo} style:--prop-bar={propBar} class="foo" ><slot /></div>
"
`;

exports[`render > renders Svelte component (minimal) 1`] = `
"<script lang="ts">
// Generated by MistCSS, do not modify
import type { SvelteHTMLElements } from 'svelte/elements'
import './component.mist.css'

type Props = {  } & SvelteHTMLElements['div']

type $$Props = Props

const { ...props } = $$props
</script>

<div {...props} class="foo" ><slot /></div>
"
`;

exports[`render > renders Svelte component (void element) 1`] = `
"<script lang="ts">
// Generated by MistCSS, do not modify
import type { SvelteHTMLElements } from 'svelte/elements'
import './component.mist.css'

type Props = {  } & SvelteHTMLElements['hr']

type $$Props = Props

const { ...props } = $$props
</script>

<hr {...props} class="foo" />
"
`;
